While crude clock is actually working now.  No face, no decorations, just hour, minute and second hands.

--- a/.htaccess
+++ b/.htaccess
@@ -49,11 +49,6 @@ FileETag None
 deny from all
 </Files>
 
-<Files nbproject/*>
-deny from all
-</Files>
-
-<Files .git/*>
-deny from all
-</Files>
+RewriteRule ^.git - [F]
+RewriteRule ^nbproject - [F]
 
