--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,6 @@
+file.reference.clock-public=public
 file.reference.public_html-clock=.
+file.reference.src-clock=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.public_html-clock}
-source.folder=${file.reference.public_html-clock}
+site.root.folder=${file.reference.clock-public}
+source.folder=${file.reference.src-clock}
