--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.5.6"
+    "angular": "1.5.6",
+    "angular-bootstrap": "1.3.3",
+    "angular-resource": "1.5.6",
+    "angular-route": "1.5.6"
   }
 }
